really fix icon alignment

--- a/mockups/html/v2/css/bootstrap-custom.css
+++ b/mockups/html/v2/css/bootstrap-custom.css
@@ -20,6 +20,6 @@ a {
 
 /* Line height adjustments screw up in firefox - hope it's fixed upstream */
 .glyphicon:before {
-    line-height: 1.2em;
+    line-height: 1.1em;
     vertical-align: text-top;
 }
